# PixelRacer

./: .gitignore  README.md  run.ps1  run.sh  tmpclaude-23ee-cwd
PXRacer/: CMakeLists.txt
PXRacer/PXRacer/: CMakeLists.txt  PXRacer.cpp  PXRacer.h  settings.txt
PXRacer/PXRacer/New Folder Test/: Test.cpp
PXRacer/PXRacer/build-macos/: PXRacer  assets
PXRacer/PXRacer/src/: main.cpp
PXRacer/PXRacer/src/Core/: AudioManager.cpp  AudioManager.h  Constants.h  Game.cpp  Game.h  SettingsManager.cpp  SettingsManager.h
PXRacer/PXRacer/src/Gameplay/: CurveProcessor.cpp  CurveProcessor.h  GameModeConfig.h  GameplayManager.cpp  GameplayManager.h  ObstacleSystem.cpp  ObstacleSystem.h  Player.cpp  Player.h  Projection3D.cpp  Projection3D.h  Road.cpp  Road.h  TrackBuilder.cpp  TrackBuilder.h  TrackDefinition.cpp  TrackDefinition.h  TrafficSystem.cpp  TrafficSystem.h
PXRacer/PXRacer/src/Rendering/: Camera.cpp  Camera.h
PXRacer/PXRacer/src/States/: CreditsState.cpp  CreditsState.h  GameModeSelectState.cpp  GameModeSelectState.h  MainMenuState.cpp  MainMenuState.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  SettingsState.cpp  SettingsState.h  State.h  StateManager.cpp  StateManager.h  TaskSelectState.cpp  TaskSelectState.h  TrackSelectState.cpp  TrackSelectState.h
PXRacer/PXRacer/src/UI/: AudioSettingsState.cpp  AudioSettingsState.h  GameHUD.cpp  GameHUD.h  MenuStyle.h  ScreenSettingsState.cpp  ScreenSettingsState.h  TitleAnimation.cpp  TitleAnimation.h
